# lerp

./: .gitignore  .travis.yml  LICENSE.txt  README.rst  requirements.txt  setup.cfg  setup.py
benchmark/: micro_bench.py
docs/: 31  Makefile  conf.py  index.rst  readthedocs-environment.yml
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_src/: api.rst  lerp.ipynb  mesh.rst  polymesh.rst
docs/_src/notebooks/: lerp.ipynb
docs/_static/css/: api.css  jupyter-notebook-custom.css
lerp/: __init__.py  intern.py  mesh.py  mesh.pyx  polymesh.py  util.py
lerp.egg-info/: PKG-INFO  SOURCES.txt
lerp/C/include/: LERP_intern.h  Mesh.h  NDTable.h  NumPyWrapper.h  Python.h  interpolation.h
lerp/C/src/: Core.c  Interpolation.c  LERP_intern.c  Mesh.c  NDTable.c  NumPyWrapper.c  Python.c  extra.c  interp.c  utils.c
lerp/core/: __init__.py  config.py  config_init.py  interpolation.c  interpolation.py  interpolation.pyx  interpolation_ctypes.py
lerp/util/: FigureData.py  __init__.py
src/: __init__.py  version.py
tests/: C_extension_Py_API.py  consistency.py  failure.py  micro_bench.py  pressure.py  test_1D.py  test_2D.py  test_consistency.py  test_simple.py  test_utils.py
