# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=10

[metadata]
author = Emmanuel Roux
name = lerp
version = 0.1.1
description = Lookup table facility in python on top of numpy
long_description = file: README.rst
keywords = interpolation, lookup table
license = MIT
url = https://github.com/gwin-zegal/lerp
download_url = https://github.com/gwin-zegal/lerp/releases/tag/untagged-01068bebf35469123485
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6

[options]
install_requires = 
    numpy
    scipy
    matplotlib
    pandas
